tests/testthat/test-recode-errors.txt
> recode(1:2, "b", 1 = "a")
+ recode(factor("a"), a = 5, .missing = 10)
+ recode("a", b = 5, "c")
+ recode(factor("a"), b = 5, "c")
+ # # no replacement
+ recode(1:5)
+ recode("a")
+ recode(factor("a"))
Error: <text>:1:20: unexpected '='
1: recode(1:2, "b", 1 =
                       ^

